--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.8.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.2.0",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.8.0",
     "lucide-react": "^0.454.0",
     "next": "^15.1.5",
     "quill": "^2.0.3",
@@ -34,7 +34,8 @@
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.5",
     "stripe": "^18.0.0",
-    "sweetalert2": "^11.19.1"
+    "sweetalert2": "^11.19.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
@@ -43,6 +44,7 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/react-toastify": "^4.1.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
